@@ -16,6 +16,7 @@ Changelog
  * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Yann Fouillat)
  * Fix: Rich text editor is no longer broken in settings (Matt Westcott)
  * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
+ * Fix: Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
 
 
 1.5 (31.05.2016)
